# voxit

./: Cargo.toml  README.md
benches/: common.rs  mesh.rs  surface_mesh.rs  visibility.rs  volume.rs
src/: classify.rs  lib.rs  main.rs  state.rs  tasks.rs  visibility.rs  volume.rs
src/export/: chunk.rs  components.rs  constants.rs  mod.rs  resources.rs  systems.rs  writer.rs
src/render/: components.rs  constants.rs  mod.rs  palette.rs  resources.rs  surface_mesh.rs  systems.rs
src/source/: components.rs  constants.rs  geotiff.rs  mesh.rs  mod.rs  resources.rs  systems.rs
src/ui/: components.rs  constants.rs  geotiff_panel.rs  hud.rs  load_screen.rs  mesh_panel.rs  mod.rs  progress.rs  resources.rs  systems.rs
tests/: golden_v010.rs
