[package]
name    = "voxit"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy                 = "0.14"
bevy_egui            = "0.28"
bevy_panorbit_camera = "0.19"
bevy_file_dialog     = "0.6"

tiff                 = "0.9"
dot_vox              = "5"
bitvec               = "1"
anyhow               = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto       = "thin"
