[package]
name    = "voxit"
version = "0.1.0"
edition = "2021"

[lib]
name = "voxit"
path = "src/lib.rs"

[[bin]]
name = "voxit"
path = "src/main.rs"

[dependencies]
bevy                 = "0.14"
bevy_egui            = "0.28"
bevy_panorbit_camera = "0.19"
bevy_file_dialog     = "0.6"

tiff                 = "0.9"
dot_vox              = "5"
bitvec               = "1"
anyhow               = "1"
rayon                = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "visibility"
harness = false

[[bench]]
name    = "surface_mesh"
harness = false

[[bench]]
name    = "volume"
harness = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto       = "thin"

[profile.bench]
opt-level = 3
lto       = "thin"
